--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -95,10 +95,10 @@
   align-items: center;
   justify-content: center;
   width: 16rem;
-  height: 5rem;
+  height: 6rem;
   padding-top: 5px;
   font-family: "Alien Encounters";
-  font-size: 2.2rem;
+  font-size: 2.4rem;
   color: var(--black);
   text-decoration: none;
   background-color: var(--white);
@@ -288,6 +288,9 @@
 
 .contact__form-button {
   margin-top: 30px;
+  width: 20rem;
+  height: 6rem;
+  font-size: 2.6rem;
 }
 
 .contact__email {
