⚙ JavaScript: Contact form functionality, fields validations and form submission working

--- a/src/css/desktop-s.css
+++ b/src/css/desktop-s.css
@@ -300,6 +300,11 @@
   transform: scale(1.05);
 }
 
+.contact__message-text {
+  text-align: center;
+  font-size: 2rem;
+}
+
 .footer__socials {
   width: 40%;
 }
