--- a/src/css/style.css
+++ b/src/css/style.css
@@ -777,6 +777,26 @@ body {
   border: 1px solid var(--light-blue);
 }
 
+.contact__message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 610px;
+}
+
+.contact__message-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 400px;
+}
+
+.contact__message-text {
+  text-align: center;
+  font-size: 2rem;
+}
+
 .footer {
   display: flex;
   width: 100%;
