--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -116,6 +116,11 @@
   font-size: 2.4rem;
 }
 
+.contact__message-text {
+  text-align: center;
+  font-size: 2rem;
+}
+
 .footer__socials {
   width: 60%;
 }
